Fix the z-index on the settings notfication

--- a/client/styles/main.sass
+++ b/client/styles/main.sass
@@ -10,6 +10,10 @@
 @import 'dashboard'
 @import 'profile'
 
+.notification-bar
+  position: fixed
+  z-index: 99999
+
 .card
   border-radius: 3px
   background: #fff
@@ -55,5 +59,3 @@
   text-decoration: none
   border-radius: 3px
   margin: 48px
-
-
